chore: add prettyprint to tests to improve result readability